# stadvdb-mco2

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN_DECISIONS.md  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml
db/: source-schema.mwb
docs/: diagrams.md  diagrams_new.md  diagrams_old.md  diagrams_plan.md  project-specs.txt
notebooks/: ETL.ipynb
public/: style.css
scripts/: configs.py  env.py  etl.py  test_suite.js
scripts/db/: load.py  node_init.py  source.py  utils.py
scripts/db/replication/: master_setup.sql  slave_setup.sql  verify_replication.sql
scripts/sql/: log_schema.sql  node_schema.sql
sql/: misc.sql  schema.sql  triggers.sql
src/: server.js  server.ts
src/config/: db.js  db.ts
src/db/: connection.ts  nodeClient.ts
src/routes/: recovery.js  recovery.ts  replication.js  riders.js  riders.ts  testRouter.js
src/services/: failoverService.js  recoveryService.js  recoveryService.ts  ridersService.js  ridersService.ts  simulationService.js
src/utils/: applyLog.js  applyLog.ts  applyLogNew.js  logger.js  logger.ts  transactions.js
tests/integration/: full_suite.test.js
tests/unit/: replication.test.js
views/: dashboard.ejs
